# ChangeLog for app-misc/cl-decoration-meta
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*cl-decoration-meta-11.6 (18 May 2011)

  18 May 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-decoration-meta-11.3-r1.ebuild, -cl-decoration-meta-11.3-r2.ebuild,
  +cl-decoration-meta-11.6.ebuild:
  Version bump.

*cl-decoration-meta-11.3-r2 (30 Mar 2011)

  30 Mar 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +cl-decoration-meta-11.3-r2.ebuild:
  Removed redundant themes (Gentoo bugs #352263 and #292201)

*cl-decoration-meta-11.3-r1 (09 Mar 2011)

  09 Mar 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-decoration-meta-11.3.ebuild, +cl-decoration-meta-11.3-r1.ebuild:
  remove x11-themes/gtk-engines-qtcurve, add x11-themes/oxygen-gtk in CLD

*cl-decoration-meta-11.3 (09 Mar 2011)

  09 Mar 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-decoration-meta-11.0-r7.ebuild, +cl-decoration-meta-11.3.ebuild:
  Version bump.

*cl-decoration-meta-11.0-r7 (09 Mar 2011)

  09 Mar 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-decoration-meta-11.0-r6.ebuild, +cl-decoration-meta-11.0-r7.ebuild:
  Add #x11-themes/xfce4-icon-theme for CLD. Needed for chromium :(

*cl-decoration-meta-11.0-r5 (07 Feb 2011)

  07 Feb 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-decoration-meta-11.0-r4.ebuild, +cl-decoration-meta-11.0-r5.ebuild:
  for CLD add x11-themes/oxygen-molecule

*cl-decoration-meta-11.0-r4 (30 Nov 2010)

  30 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-decoration-meta-11.0-r3.ebuild, +cl-decoration-meta-11.0-r4.ebuild:
  Moved fonts to cl-xorg-meta

*cl-decoration-meta-11.0-r3 (29 Nov 2010)

  29 Nov 2010; Трацевский Александр <alex@gentoo.org>
  -cl-decoration-meta-11.0-r2.ebuild, +cl-decoration-meta-11.0-r3.ebuild:
  Moved compiz to cldg-meta 

*cl-decoration-meta-11.0-r2 (25 Nov 2010)
