@@ -1,2 +1,2 @@
-EBUILD cl-decoration-meta-11.6.ebuild 972 RMD160 fd1963591e8390ca130be4ce5cb16e021a462891 SHA1 4cd258c2f8db7ff43ddbadb6630e65f6d1fc0f56 SHA256 09aba405885f3f09eee18a569bf53614b710fd215e4f4e8d1a6155316a533044
-MISC ChangeLog 2316 RMD160 f8c8057f4d2394fd486397017b38461a0412ba47 SHA1 54d1812adc43be999992b0bc5d93cd1349b9faa0 SHA256 b6e24248b3031c85d11540ef8d6af443a4d7e937f9f14eec40ad60319eee2996
+EBUILD cl-decoration-meta-11.6-r1.ebuild 857 RMD160 cb2aa8e10dbf947a4a66610cde1c64aa4c68bc1d SHA1 7d0d61841b018f77aeabd743075cd558495d6890 SHA256 0a07345186a5dae99892b77c3070f9edc20099bc922b59a572ed3fdd4d9af659
+MISC ChangeLog 2531 RMD160 08b5d4244ddcc621f6819e71fa6969bbc4a40944 SHA1 dcb924ddf8a1a0147e7a773bd94c6488c631824c SHA256 9f54f6b9a6890c4eade002de98d4d0436f9ea63143b054c170d4f471e787ac50
