@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cl-decoration-meta-11.6-r1 (29 Aug 2011)
+
+  29 Aug 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -cl-decoration-meta-11.6.ebuild, +cl-decoration-meta-11.6-r1.ebuild:
+  remote colorschemes vimcommander
+
 *cl-decoration-meta-11.6 (18 May 2011)
 
   18 May 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
